# TestBot

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean_build.bat  conanfile.txt  current_job.bat  logging.ini  md5.cpp  profile
include/core_interface/: context.h  detector.h  event.h
include/log_detector/: log_config_store.h  log_context.h  log_detector.h  log_event.h
include/md5_plugin/: md5.h
src/: CMakeLists.txt
src/app/: AppMain.cpp  CMakeLists.txt
src/log_detector/: CMakeLists.txt  log_context.cpp  log_detector.cpp
src/md5_plugin/: CMakeLists.txt  md5.cpp
tests/: CMakeLists.txt
tests/log_detector/: CMakeLists.txt  log_config_store_test.cpp  log_detector_test.cpp  log_pattern_config.csv  log_pattern_config.md
tests/md5_plugin/: md5_plugin_test.cpp
tests/quick_language/: CMakeLists.txt  quick_language_test.cpp
